# index.js
@@ -16,13 +16,6 @@ app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
 app.use(express.json())
 
 //Endpoints
-
-// TODO: Implement this later:
-app.use('/transactions/b2b', function (req, res){
-    console.log('Received incoming transfer request: ')
-    console.log('- Body:' + JSON.stringify(req.body))
-    res.send({receiverName: 'Malle Maasikas'})
-})
 app.use('/users', require('./routes/users'))
 app.use('/sessions', require('./routes/sessions'))
 app.use('/transactions', require('./routes/transactions'))
